helios-grid-volt-track-module/main/default/objects/Asset/fields/Efficency_Rating__c.field-meta.xml
<CustomField>
    <fullName>Efficency_Rating__c</fullName>
    <label>Efficency Rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>