helios-grid-volt-track-module/main/default/objects/Asset/fields/Efficiency_Rating__c.field-meta.xml
<CustomField>
    <fullName>Efficiency_Rating__c</fullName>
    <label>Efficiency Rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>